# physamp

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  _config.yml  buildBin.sh  physamp.spec
doc/: CMakeLists.txt  physamp.texi
docs/: CMakeLists.txt  _config.yml  index.md  physamp.texi
examples/LSU/: PhySamp.bpp  README.md
examples/PF01049/: AlnOptimAuto.bpp  AlnOptimFastmlStop.bpp  AlnOptimFasttree.bpp  AlnOptimFasttreeStop.bpp  PF01049_fasttree.dnd  PF01049_full.txt  README  README.md  bppalnoptim_auto_average.log.license  diagnostic.R  runFasttree.sh
man/: CMakeLists.txt  bppalnoptim.1  bppalnoptim.1.txt  bppphysamp.1
physamp/: AlignmentOptimizer.cpp  CMakeLists.txt  PhyloSampler.cpp
